@@ -86,6 +86,9 @@ Avro 1.7.2 (unreleased)
     AVRO-1164. C: Clean up valgrind warnings in test_avro_schema test case.
     (Vivek Nadkarni via dcreager)
 
+    AVRO-1165. C: Fix memory leak in generic value implementations involving
+    LINK schemas.  (Vivek Nadkarni via dcreager)
+
 Avro 1.7.1 (16 July 2012)
 
   NEW FEATURES
